--- a/viikko3/web-login/src/report.html
+++ b/viikko3/web-login/src/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,28862],[[4,5,6,0,[],[1,35,9776],[],[[7,0,0,[],[1,3158,3226],[]],[9,0,0,[],[1,6385,2775],[]]],[],[2,2,0,0]],[8,10,11,0,[],[1,9813,19042],[],[[12,0,0,[],[1,12658,7385],[]],[13,0,0,[],[1,20044,8189],[]]],[],[2,2,0,0]]],[],[],[4,4,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,38960],[[4,5,6,0,[],[1,29,11138],[],[[7,0,0,[],[1,4404,3322],[]],[9,0,0,[],[1,7727,2807],[]]],[],[2,2,0,0]],[8,10,11,0,[],[1,11169,27787],[],[[12,0,0,[],[1,13772,7526],[]],[13,0,0,[],[1,21299,8300],[]],[14,0,0,[],[1,29600,8671],[]]],[],[3,3,0,0]]],[],[],[5,5,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/Users/ellamatilda/palautusrepositorio/viikko3/web-login/src/tests","*tests","*Home","*/Users/ellamatilda/palautusrepositorio/viikko3/web-login/src/tests/home.robot","*tests/home.robot","*Click Login Link","*Login","*Click Register Link","*/Users/ellamatilda/palautusrepositorio/viikko3/web-login/src/tests/login.robot","*tests/login.robot","*Login With Correct Credentials","*Login With Incorrect Password"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/Users/ellamatilda/palautusrepositorio/viikko3/web-login/src/tests","*tests","*Home","*/Users/ellamatilda/palautusrepositorio/viikko3/web-login/src/tests/home.robot","*tests/home.robot","*Click Login Link","*Login","*Click Register Link","*/Users/ellamatilda/palautusrepositorio/viikko3/web-login/src/tests/login.robot","*tests/login.robot","*Login With Correct Credentials","*Login With Incorrect Password","*Login With Nonexistent Username"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:22","fail":0,"label":"All Tests","pass":4,"skip":0}],[],[{"elapsed":"00:00:29","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":4,"skip":0},{"elapsed":"00:00:10","fail":0,"id":"s1-s1","label":"Tests.Home","name":"Home","pass":2,"skip":0},{"elapsed":"00:00:19","fail":0,"id":"s1-s2","label":"Tests.Login","name":"Login","pass":2,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:31","fail":0,"label":"All Tests","pass":5,"skip":0}],[],[{"elapsed":"00:00:39","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":5,"skip":0},{"elapsed":"00:00:11","fail":0,"id":"s1-s1","label":"Tests.Home","name":"Home","pass":2,"skip":0},{"elapsed":"00:00:28","fail":0,"id":"s1-s2","label":"Tests.Login","name":"Login","pass":3,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1700484637697;
+window.output["baseMillis"] = 1700487457890;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 28919;
+window.output["generated"] = 38980;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
