--- a/viikko3/web-login/src/report.html
+++ b/viikko3/web-login/src/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,7860],[[4,5,6,0,[],[1,22,2274],[],[[7,0,0,[],[1,1634,418],[]],[9,0,0,[],[1,2052,161],[]]],[],[2,2,0,0]],[8,11,12,0,[],[1,2297,2838],[],[[13,0,0,[],[1,3660,733],[]],[14,0,0,[],[1,4394,355],[]],[15,0,0,[],[1,4749,310],[]]],[],[3,3,0,0]],[10,16,17,0,[],[0,5138,2719],[],[[18,0,0,[],[1,6455,810],[]],[19,0,0,[],[0,7265,515,20],[]],[21,0,0,[],[0,7781,0,22],[]],[23,0,0,[],[0,7781,1,22],[]]],[],[4,1,3,0]]],[],[],[9,6,3,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,9615],[[4,5,6,0,[],[1,34,2547],[],[[7,0,0,[],[1,1983,412],[]],[9,0,0,[],[1,2396,111],[]]],[],[2,2,0,0]],[8,11,12,0,[],[1,2583,3273],[],[[13,0,0,[],[1,4242,771],[]],[14,0,0,[],[1,5013,379],[]],[15,0,0,[],[1,5393,381],[]]],[],[3,3,0,0]],[10,16,17,0,[],[1,5859,3753],[],[[18,0,0,[],[1,7383,874],[]],[19,0,0,[],[1,8258,454],[]],[20,0,0,[],[1,8712,388],[]],[21,0,0,[],[1,9100,433],[]]],[],[4,4,0,0]]],[],[],[9,9,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/Users/ellamatilda/palautusrepositorio/viikko3/web-login/src/tests","*tests","*Home","*/Users/ellamatilda/palautusrepositorio/viikko3/web-login/src/tests/home.robot","*tests/home.robot","*Click Login Link","*Login","*Click Register Link","*Register","*/Users/ellamatilda/palautusrepositorio/viikko3/web-login/src/tests/login.robot","*tests/login.robot","*Login With Correct Credentials","*Login With Incorrect Password","*Login With Nonexistent Username","*/Users/ellamatilda/palautusrepositorio/viikko3/web-login/src/tests/register.robot","*tests/register.robot","*Register With Valid Username And Password","*Register With Too Short Username And Valid Password","*Page should have contained text 'Invalid username or password' but did not.","*Register With Valid Username And Invalid Password","*Test cannot be empty.","*Register With Nonmatching Password And Password Confirmation"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/Users/ellamatilda/palautusrepositorio/viikko3/web-login/src/tests","*tests","*Home","*/Users/ellamatilda/palautusrepositorio/viikko3/web-login/src/tests/home.robot","*tests/home.robot","*Click Login Link","*Login","*Click Register Link","*Register","*/Users/ellamatilda/palautusrepositorio/viikko3/web-login/src/tests/login.robot","*tests/login.robot","*Login With Correct Credentials","*Login With Incorrect Password","*Login With Nonexistent Username","*/Users/ellamatilda/palautusrepositorio/viikko3/web-login/src/tests/register.robot","*tests/register.robot","*Register With Valid Username And Password","*Register With Too Short Username And Valid Password","*Register With Valid Username And Invalid Password","*Register With Nonmatching Password And Password Confirmation"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:03","fail":3,"label":"All Tests","pass":6,"skip":0}],[],[{"elapsed":"00:00:08","fail":3,"id":"s1","label":"Tests","name":"Tests","pass":6,"skip":0},{"elapsed":"00:00:02","fail":0,"id":"s1-s1","label":"Tests.Home","name":"Home","pass":2,"skip":0},{"elapsed":"00:00:03","fail":0,"id":"s1-s2","label":"Tests.Login","name":"Login","pass":3,"skip":0},{"elapsed":"00:00:03","fail":3,"id":"s1-s3","label":"Tests.Register","name":"Register","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:04","fail":0,"label":"All Tests","pass":9,"skip":0}],[],[{"elapsed":"00:00:10","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":9,"skip":0},{"elapsed":"00:00:03","fail":0,"id":"s1-s1","label":"Tests.Home","name":"Home","pass":2,"skip":0},{"elapsed":"00:00:03","fail":0,"id":"s1-s2","label":"Tests.Login","name":"Login","pass":3,"skip":0},{"elapsed":"00:00:04","fail":0,"id":"s1-s3","label":"Tests.Register","name":"Register","pass":4,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1700508639565;
+window.output["baseMillis"] = 1700512276629;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 7876;
+window.output["generated"] = 9636;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
